force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POACallGoal__c.field-meta.xml
<CustomField>
    <fullName>OCE__POACallGoal__c</fullName>
    <description>Call Goal for the cycle on this Account. This is used to identify the total amount of Calls for the cycle for which the Rep will strive to call on the Account.</description>
    <label>Call Plan Goal</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>