force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POACumulativeGoal__c.field-meta.xml
<CustomField>
    <fullName>OCE__POACumulativeGoal__c</fullName>
    <description>POA Cumulative Goal across activities configured at Activity Plan Configs</description>
    <inlineHelpText>POA Cumulative Goal across activities configured at Activity Plan Configs</inlineHelpText>
    <label>POA Cumulative Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>