force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAEndDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAEndDate__c</fullName>
    <description>Call Plan End Date</description>
    <label>Call Plan End Date</label>
    <type>Date</type>
</CustomField>