force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAFaceToFaceCallGoal__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAFaceToFaceCallGoal__c</fullName>
    <description>POA Face To Face Call Goal for Face to Face Calls</description>
    <inlineHelpText>POA Face To Face Call Goal for Face to Face Calls</inlineHelpText>
    <label>POA Face To Face Call Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>