force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAIndicator__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAIndicator__c</fullName>
    <description>Call Plan Indicator</description>
    <formula>IF(
            OCE__POAToDateCalls__c &gt; 0,
            IF(
                OCE__POAToDateCalls__c &gt; OCE__POACallGoal__c,
                &apos;color-text-green&apos;,
                IF(
                    OCE__POAToDateCalls__c = OCE__POACallGoal__c,
                    &apos;color-text-lightgreen&apos;,
                    IF(
                        OCE__POAProratedGoal__c &gt; 0,
                        IF(
                            OCE__POAToDateCalls__c/OCE__POAProratedGoal__c * 100 &gt; 100,
                            &apos;color-text-yellow&apos;,
                            IF(
                                OCE__POAToDateCalls__c/OCE__POAProratedGoal__c * 100 = 100,
                                &apos;color-text-orange&apos;,
                                IF(
                                    OCE__POAToDateCalls__c/OCE__POAProratedGoal__c * 100 &gt;= 75,
                                    &apos;color-text-brown&apos;,
                                    &apos;color-text-red&apos;
                                )
                            )
                        ),
                        &apos;&apos;
                    )
                )
            ),
            &apos;&apos;
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Plan Indicator</label>
    <type>Text</type>
</CustomField>