force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAPhoneCallGoal__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAPhoneCallGoal__c</fullName>
    <description>POA Phone Call Goal</description>
    <inlineHelpText>POA Phone Call Goal</inlineHelpText>
    <label>POA Phone Call Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>