force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POARemoteCallGoal__c.field-meta.xml
<CustomField>
    <fullName>OCE__POARemoteCallGoal__c</fullName>
    <description>POA Remote Call Goal</description>
    <inlineHelpText>POA Remote Call Goal</inlineHelpText>
    <label>POA Remote Call Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>