force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POARepPresentationMeetingGoal__c.field-meta.xml
<CustomField>
    <fullName>OCE__POARepPresentationMeetingGoal__c</fullName>
    <description>POA Rep Representation Meeting Goal</description>
    <inlineHelpText>POA Rep Representation Meeting Goal</inlineHelpText>
    <label>POA Rep Presentation Meeting Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>