force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAScheduledCumulative__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAScheduledCumulative__c</fullName>
    <description>POA Scheduled Cumulative across different activities configured at Activity Plan Configs</description>
    <inlineHelpText>POA Scheduled Cumulative across different activities configured at Activity Plan Configs</inlineHelpText>
    <label>POA Scheduled Cumulative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>