force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAScheduledFaceToFaceCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAScheduledFaceToFaceCalls__c</fullName>
    <description>POA Scheduled Face to Face Calls</description>
    <inlineHelpText>POA Scheduled Face to Face Calls</inlineHelpText>
    <label>POA Scheduled Face To Face Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>