force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAScheduledPhoneCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAScheduledPhoneCalls__c</fullName>
    <description>POA Scheduled Phone Calls</description>
    <inlineHelpText>POA Scheduled Phone Calls</inlineHelpText>
    <label>POA Scheduled Phone Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>