force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAScheduledRemoteCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAScheduledRemoteCalls__c</fullName>
    <description>POA Scheduled Remote calls</description>
    <inlineHelpText>POA Scheduled Remote calls</inlineHelpText>
    <label>POA Scheduled Remote Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>