force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAScheduledRepPresentationMeetings__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAScheduledRepPresentationMeetings__c</fullName>
    <description>POA Scheduled Rep Presentation Meetings</description>
    <inlineHelpText>POA Scheduled Rep Presentation Meetings</inlineHelpText>
    <label>POA Scheduled Rep Presentation Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>