force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAScheduledSpeakerMeetings__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAScheduledSpeakerMeetings__c</fullName>
    <description>POA Scheduled Speaker Meetings</description>
    <inlineHelpText>POA Scheduled Speaker Meetings</inlineHelpText>
    <label>POA Scheduled Speaker Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>