force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POASpeakerMeetingGoal__c.field-meta.xml
<CustomField>
    <fullName>OCE__POASpeakerMeetingGoal__c</fullName>
    <description>POA Speaker Meeting Goal</description>
    <inlineHelpText>POA Speaker Meeting Goal</inlineHelpText>
    <label>POA Speaker Meeting Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>