force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAStartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAStartDate__c</fullName>
    <description>Call Plan Start Date</description>
    <label>Call Plan Start Date</label>
    <type>Date</type>
</CustomField>