force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAToDateCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAToDateCalls__c</fullName>
    <description>Indicates the number of Calls on the Account for the current POA period.</description>
    <label>Call Plan to Date Calls</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>