force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAToDateCumulative__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAToDateCumulative__c</fullName>
    <description>POA To Date Cumulative across different activities like calls,meeting etc. configured at Activity Plan configs.</description>
    <inlineHelpText>POA To Date Cumulative across different activities like calls,meeting etc. configured at Activity Plan configs.</inlineHelpText>
    <label>POA To Date Cumulative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>