force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAToDateFaceToFaceCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAToDateFaceToFaceCalls__c</fullName>
    <description>POA To Date Face to Face Calls</description>
    <inlineHelpText>POA To Date Face to Face Calls</inlineHelpText>
    <label>POA To Date Face To Face Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>