force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAToDatePhoneCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAToDatePhoneCalls__c</fullName>
    <description>POA To Date Phone Calls</description>
    <inlineHelpText>POA To Date Phone Calls</inlineHelpText>
    <label>POA To Date Phone Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>