force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAToDateRemoteCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAToDateRemoteCalls__c</fullName>
    <description>POA To Date Remote calls</description>
    <inlineHelpText>POA To Date Remote calls</inlineHelpText>
    <label>POA To Date Remote Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>