force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAToDateRepPresentationMeetings__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAToDateRepPresentationMeetings__c</fullName>
    <description>POA To Date Rep Presentation Meeting up to today</description>
    <inlineHelpText>POA To Date Rep Presentation Meeting up to today</inlineHelpText>
    <label>POA To Date Rep Presentation Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>