force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__POAToDateSpeakerMeetings__c.field-meta.xml
<CustomField>
    <fullName>OCE__POAToDateSpeakerMeetings__c</fullName>
    <description>POA To Date Speaker Meetings</description>
    <inlineHelpText>POA To Date Speaker Meetings</inlineHelpText>
    <label>POA To Date Speaker Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>