force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__Potential_Calls_Indicator__c.field-meta.xml
<CustomField>
    <fullName>OCE__Potential_Calls_Indicator__c</fullName>
    <description>Potential Calls Indicator</description>
    <formula>IF(  OCE__PotentialCalls__c   &gt; 0, 
IF(OCE__PotentialCalls__c &gt;  OCE__POACallGoal__c , 
&apos;color-text-green&apos;, 
IF(OCE__PotentialCalls__c = OCE__POACallGoal__c, 
&apos;color-text-lightgreen&apos;, 
IF( OCE__PotentialCalls__c/ OCE__POAProratedGoal__c  *100 &gt; 100, 
&apos;color-text-yellow&apos;, 
IF( OCE__PotentialCalls__c/OCE__POAProratedGoal__c *100 = 100, 
&apos;color-text-orange&apos;, 
IF( OCE__PotentialCalls__c/OCE__POAProratedGoal__c *100 &gt;= 75, 
&apos;color-text-brown&apos;, 
&apos;color-text-red&apos; 
) 
) 
) 
) 
), 
&apos;&apos; 
)</formula>
    <label>Potential Calls Indicator</label>
    <type>Text</type>
</CustomField>