force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialCalls__c</fullName>
    <description>Sum of Actual calls and Scheduled calls.</description>
    <formula>( OCE__POAToDateCalls__c +  OCE__ScheduledCalls__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>