force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialCumulativeActivities__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialCumulativeActivities__c</fullName>
    <description>Potential Cumulative Activities</description>
    <formula>( OCE__POAToDateCumulative__c +  OCE__POAScheduledCumulative__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Cumulative Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>