force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialCumulativeActivitiesIndicator__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialCumulativeActivitiesIndicator__c</fullName>
    <description>Potential Cumulative ActivitiesIndicator</description>
    <formula>IF(  OCE__PotentialCumulativeActivities__c   &gt; 0, 
            IF(OCE__PotentialCumulativeActivities__c &gt;  OCE__POACumulativeGoal__c , 
            &apos;color-text-green&apos;, 
            IF(OCE__PotentialCumulativeActivities__c = OCE__POACumulativeGoal__c, 
            &apos;color-text-lightgreen&apos;, 
            IF( OCE__PotentialCumulativeActivities__c/ OCE__CumulativeActivityPOAProratedGoal__c  *100 &gt; 100, 
            &apos;color-text-yellow&apos;, 
            IF( OCE__PotentialCumulativeActivities__c/OCE__CumulativeActivityPOAProratedGoal__c *100 = 100, 
            &apos;color-text-orange&apos;, 
            IF( OCE__PotentialCumulativeActivities__c/OCE__CumulativeActivityPOAProratedGoal__c *100 &gt;= 75, 
            &apos;color-text-brown&apos;, 
            &apos;color-text-red&apos; 
            ) 
            ) 
            ) 
            ) 
            ), 
            &apos;&apos; 
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Cumulative ActivitiesIndicator</label>
    <type>Text</type>
</CustomField>