force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialFacetoFaceCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialFacetoFaceCalls__c</fullName>
    <description>Potential Face to Face Calls</description>
    <formula>( OCE__POAToDateFaceToFaceCalls__c +  OCE__POAScheduledFaceToFaceCalls__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Face to Face Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>