force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialFacetoFaceCallsIndicator__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialFacetoFaceCallsIndicator__c</fullName>
    <description>Potential Face to Face Calls Indicator</description>
    <formula>IF(  OCE__PotentialFacetoFaceCalls__c   &gt; 0, 
            IF(OCE__PotentialFacetoFaceCalls__c &gt;  OCE__POAFaceToFaceCallGoal__c , 
            &apos;color-text-green&apos;, 
            IF(OCE__PotentialFacetoFaceCalls__c = OCE__POAFaceToFaceCallGoal__c, 
            &apos;color-text-lightgreen&apos;, 
            IF( OCE__PotentialFacetoFaceCalls__c/ OCE__FacetoFaceCallPOAProratedGoal__c  *100 &gt; 100, 
            &apos;color-text-yellow&apos;, 
            IF( OCE__PotentialFacetoFaceCalls__c/OCE__FacetoFaceCallPOAProratedGoal__c *100 = 100, 
            &apos;color-text-orange&apos;, 
            IF( OCE__PotentialFacetoFaceCalls__c/OCE__FacetoFaceCallPOAProratedGoal__c *100 &gt;= 75, 
            &apos;color-text-brown&apos;, 
            &apos;color-text-red&apos; 
            ) 
            ) 
            ) 
            ) 
            ), 
            &apos;&apos; 
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Face to Face Calls Indicator</label>
    <type>Text</type>
</CustomField>