force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialPhoneCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialPhoneCalls__c</fullName>
    <description>Potential Phone Calls</description>
    <formula>( OCE__POAToDatePhoneCalls__c +  OCE__POAScheduledPhoneCalls__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Phone Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>