force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialPhoneCallsIndicator__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialPhoneCallsIndicator__c</fullName>
    <description>Potential Phone Calls Indicator</description>
    <formula>IF(  OCE__PotentialPhoneCalls__c   &gt; 0, 
            IF(OCE__PotentialPhoneCalls__c &gt;  OCE__POAPhoneCallGoal__c , 
            &apos;color-text-green&apos;, 
            IF(OCE__PotentialPhoneCalls__c = OCE__POAPhoneCallGoal__c, 
            &apos;color-text-lightgreen&apos;, 
            IF( OCE__PotentialPhoneCalls__c/ OCE__PhoneCallPOAProratedGoal__c  *100 &gt; 100, 
            &apos;color-text-yellow&apos;, 
            IF( OCE__PotentialPhoneCalls__c/OCE__PhoneCallPOAProratedGoal__c *100 = 100, 
            &apos;color-text-orange&apos;, 
            IF( OCE__PotentialPhoneCalls__c/OCE__PhoneCallPOAProratedGoal__c *100 &gt;= 75, 
            &apos;color-text-brown&apos;, 
            &apos;color-text-red&apos; 
            ) 
            ) 
            ) 
            ) 
            ), 
            &apos;&apos; 
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Phone Calls Indicator</label>
    <type>Text</type>
</CustomField>