force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialRemoteCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialRemoteCalls__c</fullName>
    <description>Potential Remote Calls</description>
    <formula>( OCE__POAToDateRemoteCalls__c +  OCE__POAScheduledRemoteCalls__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Remote Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>