force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialRepPresentations__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialRepPresentations__c</fullName>
    <description>Potential Rep Presentations</description>
    <formula>( OCE__POAToDateRepPresentationMeetings__c +  OCE__POAScheduledRepPresentationMeetings__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Rep Presentations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>