force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialRepPresentationsIndicator__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialRepPresentationsIndicator__c</fullName>
    <description>Potential Rep Presentations Indicator</description>
    <formula>IF(  OCE__PotentialRepPresentations__c   &gt; 0, 
            IF(OCE__PotentialRepPresentations__c &gt;  OCE__POARepPresentationMeetingGoal__c , 
            &apos;color-text-green&apos;, 
            IF(OCE__PotentialRepPresentations__c = OCE__POARepPresentationMeetingGoal__c, 
            &apos;color-text-lightgreen&apos;, 
            IF( OCE__PotentialRepPresentations__c/ OCE__RepRepresentationPOAProratedGoal__c  *100 &gt; 100, 
            &apos;color-text-yellow&apos;, 
            IF( OCE__PotentialRepPresentations__c/OCE__RepRepresentationPOAProratedGoal__c *100 = 100, 
            &apos;color-text-orange&apos;, 
            IF( OCE__PotentialRepPresentations__c/OCE__RepRepresentationPOAProratedGoal__c *100 &gt;= 75, 
            &apos;color-text-brown&apos;, 
            &apos;color-text-red&apos; 
            ) 
            ) 
            ) 
            ) 
            ), 
            &apos;&apos; 
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Rep Presentations Indicator</label>
    <type>Text</type>
</CustomField>