force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialSpeakerMeetings__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialSpeakerMeetings__c</fullName>
    <description>Potential Speaker Meetings</description>
    <formula>( OCE__POAToDateSpeakerMeetings__c +  OCE__POAScheduledSpeakerMeetings__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Speaker Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>