force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PotentialSpeakerMeetingsIndicator__c.field-meta.xml
<CustomField>
    <fullName>OCE__PotentialSpeakerMeetingsIndicator__c</fullName>
    <description>Potential Speaker Meetings Indicator</description>
    <formula>IF(  OCE__PotentialSpeakerMeetings__c   &gt; 0, 
            IF(OCE__PotentialSpeakerMeetings__c &gt;  OCE__POASpeakerMeetingGoal__c , 
            &apos;color-text-green&apos;, 
            IF(OCE__PotentialSpeakerMeetings__c = OCE__POASpeakerMeetingGoal__c, 
            &apos;color-text-lightgreen&apos;, 
            IF( OCE__PotentialSpeakerMeetings__c/ OCE__SpeakerMeetingPOAProratedGoal__c  *100 &gt; 100, 
            &apos;color-text-yellow&apos;, 
            IF( OCE__PotentialSpeakerMeetings__c/OCE__SpeakerMeetingPOAProratedGoal__c *100 = 100, 
            &apos;color-text-orange&apos;, 
            IF( OCE__PotentialSpeakerMeetings__c/OCE__SpeakerMeetingPOAProratedGoal__c *100 &gt;= 75, 
            &apos;color-text-brown&apos;, 
            &apos;color-text-red&apos; 
            ) 
            ) 
            ) 
            ) 
            ), 
            &apos;&apos; 
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Speaker Meetings Indicator</label>
    <type>Text</type>
</CustomField>