force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PreferredAddress__c.field-meta.xml
<CustomField>
    <fullName>OCE__PreferredAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Address relation. Link Account Territory Fields to Account Address</description>
    <inlineHelpText>Account Address relation. Link Account Territory Fields to Account Address</inlineHelpText>
    <label>Preferred Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OCE__AccountAddress__c.OCE__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.OCE__Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>OCE__AccountAddress__c</referenceTo>
    <relationshipLabel>Account Territory Fields</relationshipLabel>
    <relationshipName>AccountTerritoryFields</relationshipName>
    <type>Lookup</type>
</CustomField>