force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PreferredFullAddress__c.field-meta.xml
<CustomField>
    <fullName>OCE__PreferredFullAddress__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Preferred full address</description>
    <formula>OCE__PreferredAddress__r.OCE__FullAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Full Address</label>
    <type>Text</type>
</CustomField>