force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PreferredWorkplace__c.field-meta.xml
<CustomField>
    <fullName>OCE__PreferredWorkplace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Preferred Workplace for HCP Customers</description>
    <label>Preferred Workplace</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select HCO record.</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Territory Fields (Preferred Workplace)</relationshipLabel>
    <relationshipName>Account_Territory_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>