force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__ProductRestrictionsSKU__c.field-meta.xml
<CustomField>
    <fullName>OCE__ProductRestrictionsSKU__c</fullName>
    <description>Semicolon separated list of product External Ids</description>
    <label>Product Restrictions SKU</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>