force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__RemoteCallPlannedAttainment__c.field-meta.xml
<CustomField>
    <fullName>OCE__RemoteCallPlannedAttainment__c</fullName>
    <description>Remote Call Planned Attainment</description>
    <formula>(IF( OCE__POARemoteCallGoal__c &gt; 0, (OCE__POAToDateRemoteCalls__c + OCE__POAScheduledRemoteCalls__c ) /OCE__POARemoteCallGoal__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remote Call Planned Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>