force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__RemoteCallPOAIndicator__c.field-meta.xml
<CustomField>
    <fullName>OCE__RemoteCallPOAIndicator__c</fullName>
    <description>Remote Call POA Indicator</description>
    <formula>IF(
             OCE__POAToDateRemoteCalls__c &gt; 0,
            IF(
                OCE__POAToDateRemoteCalls__c &gt; OCE__POARemoteCallGoal__c,
                &apos;color-text-green&apos;,
                IF(
                    OCE__POAToDateRemoteCalls__c = OCE__POARemoteCallGoal__c,
                    &apos;color-text-lightgreen&apos;,
                    IF(
                        OCE__RemoteCallPOAProratedGoal__c &gt; 0,
                        IF(
                            OCE__POAToDateRemoteCalls__c/OCE__RemoteCallPOAProratedGoal__c * 100 &gt; 100,
                            &apos;color-text-yellow&apos;,
                            IF(
                                OCE__POAToDateRemoteCalls__c/OCE__RemoteCallPOAProratedGoal__c * 100 = 100,
                                &apos;color-text-orange&apos;,
                                IF(
                                    OCE__POAToDateRemoteCalls__c/OCE__RemoteCallPOAProratedGoal__c * 100 &gt;= 75,
                                    &apos;color-text-brown&apos;,
                                    &apos;color-text-red&apos;
                                )
                            )
                        ),
                        &apos;&apos;
                    )
                )
            ),
            &apos;&apos;
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remote Call POA Indicator</label>
    <type>Text</type>
</CustomField>