force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__RepRepresentationPlannedAttainment__c.field-meta.xml
<CustomField>
    <fullName>OCE__RepRepresentationPlannedAttainment__c</fullName>
    <description>Rep Representation Planned Attainment</description>
    <formula>(IF( OCE__POARepPresentationMeetingGoal__c &gt; 0, (OCE__POAToDateRepPresentationMeetings__c + OCE__POAScheduledRepPresentationMeetings__c ) /OCE__POARepPresentationMeetingGoal__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Representation Planned Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>