force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__RepRepresentationPOAAttainment__c.field-meta.xml
<CustomField>
    <fullName>OCE__RepRepresentationPOAAttainment__c</fullName>
    <description>Rep Representation POA Attainment</description>
    <formula>IF( OCE__POARepPresentationMeetingGoal__c &gt; 0,  OCE__POAToDateRepPresentationMeetings__c /OCE__POARepPresentationMeetingGoal__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Representation POA Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>